syntax = "proto3";

package grpc;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

import "github.com/elojah/game_02/pkg/space/dto/tile.proto";

service Tool {
    rpc CreateTileSet(dto.CreateSet) returns (google.protobuf.Empty);
}